--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "vue": "^2.5.22",
+    "vue-class-component": "^6.3.2",
     "vue-styled-components": "^1.4.4"
   },
   "devDependencies": {
@@ -31,7 +32,8 @@
     ],
     "rules": {},
     "parserOptions": {
-      "parser": "babel-eslint"
+      "parser": "babel-eslint",
+      "experimentalDecorators": true
     }
   },
   "postcss": {
