--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "vue": "^2.5.22",
     "vue-class-component": "^6.3.2",
+    "vue-hooks": "^0.3.2",
     "vue-styled-components": "^1.4.4",
     "vuex": "^3.1.0"
   },
